# anki

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml
api/anki-api/: Cargo.toml
api/anki-api-client/: Cargo.toml
api/anki-api-client/src/: channel.rs  lib.rs  rustls_channel.rs  transport.rs
api/anki-api-client/src/transport/: mod.rs  plaintext.rs  spiffe.rs  tls.rs
api/anki-api-proto/: Cargo.toml  build.rs
api/anki-api-proto/src/: lib.rs
api/anki-api/src/: adapter.rs  auth.rs  config.rs  grpc.rs  lib.rs  logging.rs  store.rs  transport.rs
api/anki-api/src/service/: cards.rs  common.rs  decks.rs  health.rs  mod.rs  notes.rs  notetypes.rs  search.rs  system.rs
docs/: api-v1.md
proto/anki/: notes.proto  notetypes.proto
proto/anki/api/v1/: cards.proto  common.proto  decks.proto  health.proto  notes.proto  notetypes.proto  search.proto  system.proto
pylib/anki/: _backend.py  _rsbridge.pyi
pylib/rsbridge/: Cargo.toml  lib.rs
qt/aqt/: main.py  mediasrv.py
qt/launcher/: Cargo.toml
qt/launcher/mac/: build-local.sh  build.sh  pyproject.local.toml
qt/launcher/src/: locale.rs  main.rs
qt/launcher/src/platform/: mac.rs
rslib/src/: log.rs
rslib/src/notes/: service.rs
rslib/src/notetype/: service.rs
rslib/src/storage/note/: get_changes_page.sql  mod.rs
rslib/src/storage/notetype/: get_changes_page.sql  mod.rs
