[package]
name = "anki-api-client"
version.workspace = true
authors.workspace = true
edition = "2024"
license.workspace = true
publish = false
rust-version = "1.92"
description = "Rust client for Anki API v1"

[dependencies]
anki-api-proto = { path = "../anki-api-proto" }
futures.workspace = true
http.workspace = true
hyper = { workspace = true, features = ["client", "http2"] }
hyper-util = { workspace = true, features = ["client", "client-legacy", "tokio"] }
prost14 = { package = "prost", version = "0.14" }
rustls.workspace = true
rustls-native-certs = "0.8.3"
spiffe.workspace = true
spiffe-rustls.workspace = true
spiffe-rustls-tokio.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
tonic = { workspace = true, features = ["tls-ring", "tls-native-roots"] }
tracing.workspace = true
tower.workspace = true
