[package]
name = "anki-api"
version.workspace = true
authors.workspace = true
edition = "2024"
license.workspace = true
publish = false
rust-version = "1.92"
description = "In-process gRPC server for Anki API v1"

[dependencies]
anki = { workspace = true }
anki-api-proto = { path = "../anki-api-proto" }
anki_proto = { workspace = true }
dirs.workspace = true
futures.workspace = true
prost.workspace = true
prost-types = "0.14"
prost14 = { package = "prost", version = "0.14" }
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
toml.workspace = true
tonic.workspace = true
tonic-health.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
