[package]
name = "rsbridge"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true
description = "Anki's Rust library code Python bindings"

[lib]
name = "rsbridge"
crate-type = ["cdylib"]
path = "lib.rs"
test = false

[dependencies]
anki.workspace = true
anki-api = { path = "../../api/anki-api" }
pyo3.workspace = true
tokio.workspace = true

[features]
rustls = ["anki/rustls"]
native-tls = ["anki/native-tls"]
